# foto

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: api.rs  auth.rs  config.rs  consts.rs  images.rs  main.rs  page.rs  response.rs  search.rs  test.rs  upload.rs  user.rs
src/api/: login.rs  register.rs  search.rs  upload.rs
src/page/: login.rs
