[package]
name = "foto"
version = "0.1.0"
authors = ["ClementTsang <cjhtsang@uwaterloo.ca>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
img_hash = "3.1.0"
serde = { version = "1.0.119", features = ["derive"] }
ring = "0.16.19"
jsonwebtoken = "7.2.0"
rusoto_s3 = "0.46.0"
base64 = "0.13.0"
anyhow = "1.0"
once_cell = "1.5.2"
thiserror = "1.0"
chrono = "0.4"
multer = "1.2.2"
futures = "0.3.12"
nanoid = "0.3.0"
reqwest = "0.11.0"
serde_json = "1.0"
rusqlite = { version = "0.23.1", features = ["functions"] }

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
default-features = false
features = ["json", "sqlite_pool"]

[dev-dependencies]
rand = "0.8.0"